--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -2,10 +2,25 @@
 <html>
 
 <head>
-  <title>Page Title</title>
+  <title>Second frontend academy homework</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+
+  <header>
+    <h1><span class="logo-text">My homework logo</span></h1>
+
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Products</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <form>
     <label for="form_email">Email:</label><br>
