--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <header>
+  <header class="desktop-header">
     <h1><span class="logo-text">My homework logo</span></h1>
 
     <nav>
@@ -22,17 +22,30 @@
     </nav>
   </header>
 
+  <header class="mobile-header">
+    <h1><span class="logo-text">My homework logo</span></h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Our Products</a></li>
+        <li><a href="#">Careers</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
+
   <form>
-    <label for="form_email">Email:</label><br>
-    <input type="email" id="form_email" name="email" required><br>
+    <label for="form-email">Email:</label><br>
+    <input type="email" id="form-email" name="email" required><br>
 
-    <label for="form_password">Password:</label><br>
-    <input type="password" id="form_password" name="password" required><br>
+    <label for="form-password">Password:</label><br>
+    <input type="password" id="form-password" name="password" required><br>
 
-    <label for="form_text">Text sentence:</label><br>
-    <input type="text" id="form_text" name="fname"><br>
+    <label for="form-text">Text sentence:</label><br>
+    <input type="text" id="formtext" name="fname"><br>
 
-    <input type="submit" id=form_submit value="Submit">
+    <input type="submit" id=form-submit value="Submit">
   </form>
 
 </body>
