mobile and web header prettified

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Second frontend academy homework</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -23,14 +24,11 @@
   </header>
 
   <header class="mobile-header">
-    <h1><span class="logo-text">My homework logo</span></h1>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Our Products</a></li>
-        <li><a href="#">Careers</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
   </header>
