--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="desktop-header">
-    <h1><span class="logo-text">My homework logo</span></h1>
+    <h1><span class="logo-text">My logo</span></h1>
 
     <nav>
       <ul>
@@ -18,7 +18,14 @@
         <li><a href="#">About Us</a></li>
         <li><a href="#">Our Products</a></li>
         <li><a href="#">Careers</a></li>
-        <li><a href="#">Contact Us</a></li>
+        <li class="dropdown">
+          <a href="#">More <i class="fa fa-chevron-down"></i></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">FAQs</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+          </ul>
+        </li>
       </ul>
     </nav>
   </header>
@@ -38,7 +45,7 @@
     <input type="email" id="form-email" name="email" required><br>
 
     <label for="form-password">Password:</label><br>
-    <input type="password" id="form-password" name="password" required><br>
+    <input type="password" id="form-password" name="password" minlength="8" required><br>
 
     <label for="form-text">Text sentence:</label><br>
     <input type="text" id="formtext" name="fname"><br>
