expanded mobile menu

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -32,7 +32,8 @@
 
   <header class="mobile-header">
     <nav>
-      <ul>
+      <a href="#menu" class="menu-toggle-link">Menu</a>
+      <ul class="menu" id="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Contact</a></li>
