implemented suggestions from pull request

--- a/homework_2/index.html
+++ b/homework_2/index.html
@@ -32,7 +32,8 @@
 
   <header class="mobile-header">
     <nav>
-      <a href="#menu" class="menu-toggle-link">Menu</a>
+      <label for="checkbox" class="menu-toggle-link">Menu</label>
+      <input type="checkbox" id="checkbox" class="checkbox">
       <ul class="menu" id="menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">Products</a></li>
@@ -49,7 +50,7 @@
     <input type="password" id="form-password" name="password" minlength="8" required><br>
 
     <label for="form-text">Text sentence:</label><br>
-    <input type="text" id="formtext" name="fname"><br>
+    <input type="text" id="form-text" name="fname"><br>
 
     <input type="submit" id=form-submit value="Submit">
   </form>
